# videos-summarizer

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  start_app.bat  start_app.sh
backend/: api.py  main.py
backend/src/: frame_to_caption.py  llm_chat.py
backend/src/download/: youtube_downloader.py
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx
src/: audio_extractor.py  frame_to_caption.py  video_downloader.py  video_to_frames.py  youtube_downloader.py
src/audio/: audio_transcriber.py
src/download/: youtube_downloader.py
