[project]
name = "youtube-multimodal-summarizer"
version = "0.1.0"
description = "Summarize YouTube videos using audio transcription, visual frame analysis, and a local LLM."
authors = [
    {name = "Your Name"}
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "yt-dlp",
    "faster-whisper",
    "moviepy",
    "moondream",
    "opencv-python",
    "torch>=2.1.0",
    "transformers>=4.44.0",
    "accelerate>=0.25.0",
    "tqdm>=4.66.0",
    "ollama"
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pytest"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]